--- a/ref.bib
+++ b/ref.bib
@@ -8,3 +8,12 @@
   year      = {2011},
   publisher = {Wiley Online Library}
 }
+@article{meder2016institutional,
+  title   = {Institutional core facilities: prerequisite for breakthroughs in the life sciences: core facilities play an increasingly important role in biomedical research by providing scientists access to sophisticated technology and expertise},
+  author  = {Meder, Doris and Morales, M{\`o}nica and Pepperkok, Rainer and Schlapbach, Ralph and Tiran, Andreas and Van Minnebruggen, Geert},
+  journal = {EMBO reports},
+  volume  = {17},
+  number  = {8},
+  pages   = {1088--1093},
+  year    = {2016}
+}
