--- a/6001_Francis.tex
+++ b/6001_Francis.tex
@@ -35,7 +35,7 @@
 The immune system is a complex protective network of molecules, tissues ,cells and organs that work closely together and fight aginst foreign or dangerous invaders such as pathogenic microbe,viruses, parasites, foreign tissue.\medskip
 
 The components such as white blood cells, antibodies, the complement system, the lymphatic system are important to  immune system, particularly for bone marrow and thymus.Both bone marrow and thymus are belong to primary lymphoid organs where to  generate and multiply two main of lymphocytes, which includes B and T cells.
-Bone marrow is a spongy tissue which responsible to produce all body's blood cells, including B (mature in bond marrow) and T lymphocytes(mature in thymus). Different blood cells will work together within the immune system and  move to place needed to defence foreign substances in the body from the bone marrow;while for Thymus is a gland can be found above the heart and between the lungs. The Thymus eventually will replaced by connective tissue and fat, which only active in the stage of puberty and gradully slow down.The thymus is take charge of producing the hormone thym , and thereby assist in the generation of T cells.T cells are borned in the bone marrow and mature in thymus,after multiply in the thymus which will divdie into helper, regulatory, or cytotoxic T cells such as (i)CD4 helper T cells: Be a helper cells to guide immunse system to attack invaders as rapidly and efficeiently as possbile, which also communicate with the B cells producing antibodies.() 
+Bone marrow is a spongy tissue which responsible to produce all body's blood cells, including B (mature in bond marrow) and T lymphocytes(mature in thymus). Different blood cells will work together within the immune system and  move to place needed to defence foreign substances in the body from the bone marrow;while for Thymus is a gland can be found above the heart and between the lungs. The Thymus eventually will replaced by connective tissue and fat, which only active in the stage of puberty and gradully slow down.The thymus is take charge of producing the hormone thym , and thereby assist in the generation of T cells.T cells are borned in the bone marrow and mature in thymus,after multiply in the thymus which will divdie into helper, regulatory, or cytotoxic T cells such as (i)CD4 helper T cells: Be a helper cells to guide immunse system to attack invaders as rapidly and efficeiently as possbile, which also communicate with the B cells producing antibodies.(ii) 
 
 
 and equipped with the ability to distinguish the different between foreign antigens and body's own antigens.
