--- a/6002_corelab.tex
+++ b/6002_corelab.tex
@@ -66,9 +66,10 @@ The assessment of the annual report is available in a spider diagram with eight 
 
 
 \begin{figure}[H]
-    \includegraphics[width= 1 \columnwidth]{/Users/yu-pinglin/Desktop/Essay/6002_corelab.png}
+    \includegraphics[width= 0.9 \columnwidth]{/Users/yu-pinglin/Desktop/Essay/6002_corelab.png}
     \centering
-    \caption{Changes in the cost of sequencing over time}
+    \caption{The 4 pillars for building a sustainable portfolio of
+    core facilities.}
 \end{figure}
 
 
